<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="settings">Settings</string>
    <string name="tic_tac_toe">TIC TAC TOE</string>
    <string name="enter_you_name">Enter You name</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="submit">Submit</string>
    <string name="_0">0</string>
    <string name="name2">Name2 =</string>
    <string name="name1">Name1 =</string>
    <string name="turn_x">Turn X</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="close_app">Close App</string>
    <string name="reset">Reset</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>