<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerView"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/name1"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/name2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.79"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/name1score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/name2score"
            app:layout_constraintStart_toEndOf="@+id/name1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.79"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name2"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/name1"
            app:layout_constraintTop_toBottomOf="@+id/name1" />

        <TextView
            android:id="@+id/name2score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toEndOf="@+id/name2"
            app:layout_constraintTop_toBottomOf="@+id/name1score" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.63">

            <LinearLayout style="@style/row">

                <Button
                    android:id="@+id/a1"
                    style="@style/components" />

                <View style="@style/vertical_line" />

                <Button
                    android:id="@+id/a2"
                    style="@style/components" />

                <View style="@style/vertical_line" />

                <Button
                    android:id="@+id/a3"
                    style="@style/components" />

            </LinearLayout>

            <View style="@style/horizontal_line" />

            <LinearLayout style="@style/row">

                <Button
                    android:id="@+id/b1"
                    style="@style/components" />

                <View style="@style/vertical_line" />

                <Button
                    android:id="@+id/b2"
                    style="@style/components" />

                <View style="@style/vertical_line" />

                <Button
                    android:id="@+id/b3"
                    style="@style/components" />

            </LinearLayout>

            <View style="@style/horizontal_line" />

            <LinearLayout style="@style/row">

                <Button
                    android:id="@+id/c1"
                    style="@style/components" />

                <View style="@style/vertical_line" />

                <Button
                    android:id="@+id/c2"
                    style="@style/components" />

                <View style="@style/vertical_line" />

                <Button
                    android:id="@+id/c3"
                    style="@style/components" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/background"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.31" />

        <TextView
            android:id="@+id/display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_x"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/name1score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>